<resources>
    <string name="app_name">E Helper</string>
    <string name="youremail">Your Email</string>
    <string name="yourpassword">Your Password</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="confirmpassword">Confirm  Password</string>
    <string name="phoneno">Phone Number</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Username</string>
    <string name="logout">LOGOUT</string>
    <string name="cpno">Phone</string>
    <string name="uname">Your Name</string>
    <string name="title_users">Me</string>
    <string name="myLocation">location</string>
    <string name="my_phone">my phone</string>
</resources>
